# ryzen-prometheus-exporter

./: Cargo.toml
src/: main.rs
